[gd_scene load_steps=9 format=3 uid="uid://bvfdm0wvpvre2"]

[ext_resource type="Script" uid="uid://cow7x0m7amw5i" path="res://script/player.gd" id="1_i3pqv"]
[ext_resource type="PackedScene" uid="uid://raeeicvvindd" path="res://addons/godot-xr-tools/hands/scenes/highpoly/right_hand.tscn" id="1_onrkg"]
[ext_resource type="Script" uid="uid://c6v430d6x6c1v" path="res://script/hud_3d.gd" id="2_dqkch"]
[ext_resource type="PackedScene" uid="uid://njx823gyk04n" path="res://addons/godot-xr-tools/hands/scenes/highpoly/left_hand.tscn" id="2_i3pqv"]

[sub_resource type="QuadMesh" id="QuadMesh_qhqgy"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1jxqw"]
size = Vector3(0.2, 0.15, 0.15)

[sub_resource type="BoxShape3D" id="BoxShape3D_dw050"]
size = Vector3(0.2, 0.15, 0.15)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_jka67"]
height = 0.515
radius = 0.277

[node name="player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_i3pqv")

[node name="XROrigin3D" type="XROrigin3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]

[node name="HUD3D" type="Node3D" parent="XROrigin3D/XRCamera3D"]
script = ExtResource("2_dqkch")

[node name="SubViewport" type="SubViewport" parent="XROrigin3D/XRCamera3D/HUD3D"]

[node name="quad" type="MeshInstance3D" parent="XROrigin3D/XRCamera3D/HUD3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
mesh = SubResource("QuadMesh_qhqgy")

[node name="manoDerecha" type="XRController3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)
tracker = &"right_hand"

[node name="RightHand" parent="XROrigin3D/manoDerecha" instance=ExtResource("1_onrkg")]

[node name="grabAreaR" type="Area3D" parent="XROrigin3D/manoDerecha"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="XROrigin3D/manoDerecha/grabAreaR"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.1, -0.05, 0.05)
shape = SubResource("BoxShape3D_1jxqw")

[node name="AttachmentPoint" type="Marker3D" parent="XROrigin3D/manoDerecha"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05, -0.05, 0.08)

[node name="manoIzquierda" type="XRController3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0)
tracker = &"left_hand"

[node name="LeftHand" parent="XROrigin3D/manoIzquierda" instance=ExtResource("2_i3pqv")]

[node name="grabAreaL" type="Area3D" parent="XROrigin3D/manoIzquierda"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="XROrigin3D/manoIzquierda/grabAreaL"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, -0.05, 0.05)
shape = SubResource("BoxShape3D_dw050")

[node name="AttachmentPoint" type="Marker3D" parent="XROrigin3D/manoIzquierda"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05, -0.05, 0.08)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.544572, 0)
shape = SubResource("CylinderShape3D_jka67")

[connection signal="button_pressed" from="XROrigin3D/manoDerecha" to="." method="_on_mano_derecha_button_pressed"]
[connection signal="button_released" from="XROrigin3D/manoDerecha" to="." method="_on_mano_derecha_button_released"]
[connection signal="input_vector2_changed" from="XROrigin3D/manoDerecha" to="." method="_on_mano_derecha_input_vector_2_changed"]
[connection signal="body_entered" from="XROrigin3D/manoDerecha/grabAreaR" to="." method="_on_grab_area_r_body_entered"]
[connection signal="body_entered" from="XROrigin3D/manoDerecha/grabAreaR" to="." method="_on_grab_area_body_entered"]
[connection signal="button_pressed" from="XROrigin3D/manoIzquierda" to="." method="_on_mano_izquierda_button_pressed"]
[connection signal="button_released" from="XROrigin3D/manoIzquierda" to="." method="_on_mano_izquierda_button_released"]
[connection signal="input_vector2_changed" from="XROrigin3D/manoIzquierda" to="." method="_on_mano_izquierda_input_vector_2_changed"]
[connection signal="body_entered" from="XROrigin3D/manoIzquierda/grabAreaL" to="." method="_on_grab_area_l_body_entered"]
[connection signal="body_entered" from="XROrigin3D/manoIzquierda/grabAreaL" to="." method="_on_grab_area_body_entered"]
